--- a/modules/web-control-center/nodejs/views/configuration/caches.jade
+++ b/modules/web-control-center/nodejs/views/configuration/caches.jade
@@ -29,7 +29,7 @@ block content
         .block-callout
             p(ng-bind-html='joinTip(screenTip)')
         .links(ng-hide='caches.length == 0')
-            table.col-sm-12(st-table='caches')
+            table(st-table='caches')
                 tbody
                     tr(ng-repeat='row in caches track by row._id')
                         td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
