# ignite-843 Fixed dropdown, modal.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -192,9 +192,11 @@
   border-bottom: 4px solid #888;
 }
 
-.theme-line ul li > a.active {
-  cursor: default;
-  pointer-events: none;
+.theme-line .navbar-nav, .theme-line  .sidebar-nav {
+  ul li > a.active {
+    cursor: default;
+    pointer-events: none;
+  }
 }
 
 .theme-line .sidebar-nav {
@@ -1050,6 +1052,3 @@ a {
     padding: 10px 0 10px 10px;
   }
 }
-
-
-
