--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -657,11 +657,24 @@ table tr:hover {
   cursor: pointer;
 }
 
-.form-control {
-  display: inline-block;
+.btn {
+  padding: 3px 6px;
+}
+
+button .caret, .btn .caret {
+  float: right;
+  margin-left: 5px;
+  margin-top: 7px;
+}
+
+.base-control {
   text-align: left;
   padding: 3px 3px;
   height: @input-height;
+}
+
+.form-control:extend(.base-control all) {
+  display: inline-block;
 
   button {
     text-align: left;
@@ -670,12 +683,6 @@ table tr:hover {
 
 .table-form-control {
   width: auto;
-}
-
-button .caret {
-  float: right;
-  margin-left: 0;
-  margin-top: 7px;
 }
 
 .theme-line .panel-heading {
@@ -790,10 +797,6 @@ button .caret {
       padding: 0;
     }
   }
-}
-
-.btn {
-  padding: 3px 6px;
 }
 
 .panel-title a {
